--- a/index.html
+++ b/index.html
@@ -410,34 +410,118 @@
 					</div>
 				</div>
 			</div>
-			<div class=" feedback p-5">
+			<div class=" feedback">
 				<h3 class="text-center mb-5 novelties-title"><span>отзывы</span></h3>
-				<div id="carouselExampleControls" class="container carousel slide" data-bs-ride="carousel">
-					<div class="carousel-inner py-lg-4 px-lg-5 text-lg-center">
-						<div class="carousel-item py-5 active">
-							<p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor.</p>
-							<p class="fw-bolder fst-normal">Лилия Таран</p>
+				<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+					<div class="carousel-inner container text-center feedback-slider py-5">
+						<div class="carousel-item active text-start">
+							<p class="text-white">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+								sollicitudin, lorem quis bibendum auctor.</p>
+							<p class="fw-bolder fst-normal text-white">Лилия Таран</p>
 						</div>
-						<div class="carousel-item  py-5">
-							<p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor.</p>
-							<p class="fw-bolder fst-normal">Лилия Таран</p>
+						<div class="carousel-item text-start">
+							<p class="text-white">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+								sollicitudin, lorem quis bibendum auctor.</p>
+							<p class="fw-bolder fst-normal text-white">Лилия Таран</p>
 						</div>
-						<div class="carousel-item  py-5">
-							<p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor.</p>
-							<p class="fw-bolder fst-normal">Лилия Таран</p>
+						<div class="carousel-item text-start">
+							<p class="text-white">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+								sollicitudin, lorem quis bibendum auctor.</p>
+							<p class="fw-bolder fst-normal text-white">Лилия Таран</p>
 						</div>
 					</div>
-					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-						data-bs-slide="prev">
-						<span class="" aria-hidden="true"></span>
-						<span>
+					<button class="carousel-control-prev feedback-prev" type="button"
+						data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+						<span aria-hidden="true"></span>
+						<span class="d-none d-md-block">
 							<img src="image/feedback/left.png" alt="prev">
 						</span>
 					</button>
-					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+					<button class="carousel-control-next feedback-next" type="button"
+						data-bs-target="#carouselExampleControls" data-bs-slide="next">
+						<span aria-hidden="true"></span>
+						<span class="d-none d-md-block">
+							<img src="image/feedback/right.png" alt="next">
+						</span>
+					</button>
+				</div>
+			</div>
+			<div class="about-us">
+				<h3 class="text-center mb-5 about-us-title"><span>О компании</span></h3>
+				<div id="carouselExampleControls-1" class="carousel slide" data-bs-ride="carousel">
+					<div class="carousel-inner container text-center about-us-slider">
+						<div class="carousel-item active text-start">
+							<p>
+								This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+								sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id
+								elit.
+								Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+							</p>
+							<p>
+								Nam nec tellus a odio tincidunt auctor a ornare odio.
+							</p>
+							<p>
+								Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora
+								torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu
+								felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi.
+							</p>
+							<p>
+								Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris
+								egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim.
+							</p>
+						</div>
+						<div class="carousel-item text-start">
+							<p>
+								This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+								sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id
+								elit.
+								Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+							</p>
+							<p>
+								Nam nec tellus a odio tincidunt auctor a ornare odio.
+							</p>
+							<p>
+								Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora
+								torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu
+								felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi.
+							</p>
+							<p>
+								Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris
+								egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim.
+							</p>
+						</div>
+						<div class="carousel-item text-start">
+							<p>
+								This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+								sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id
+								elit.
+								Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.
+							</p>
+							<p>
+								Nam nec tellus a odio tincidunt auctor a ornare odio.
+							</p>
+							<p>
+								Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora
+								torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu
+								felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi.
+							</p>
+							<p>
+								Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris
+								egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim.
+							</p>
+						</div>
+					</div>
+					<button class="carousel-control-prev about-us-prev" type="button" data-bs-target="#carouselExampleControls-1"
+						data-bs-slide="prev">
+						<span aria-hidden="true"></span>
+						<span class="d-none d-md-block">
+							<img src="image/feedback/left.png" alt="prev">
+						</span>
+					</button>
+					<button class="carousel-control-next about-us-next" type="button" data-bs-target="#carouselExampleControls-1"
 						data-bs-slide="next">
-						<span class="" aria-hidden="true"></span>
-						<span>
+						<span aria-hidden="true"></span>
+						<span class="d-none d-md-block">
 							<img src="image/feedback/right.png" alt="next">
 						</span>
 					</button>
