--- a/index.html
+++ b/index.html
@@ -13,7 +13,82 @@
 
 <body>
 	<div class="wrapper">
-		<nav class="py-2">
+		<nav class="navbar navbar-expand-lg navbar-light fixed-top" aria-label="Tenth navbar example">
+			<div class="container-fluid">
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+				  <span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
+					<div class="accordion" id="accordionPanelsStayOpenExample">
+						<div class="accordion-item">
+						  <h4 class="accordion-header" id="panelsStayOpen-headingOne">
+							 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+								Каталог Товаров
+							 </button>
+						  </h4>
+						  <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
+							 <div class="accordion-body">
+								<ul >
+									<li><a class="dropdown-item" href="#">Маникюрные педикюрные принадлежности</a></li>
+									<li><a class="dropdown-item" href="#">Гель-лаки и наращивание ногтей</a></li>
+									<li><a class="dropdown-item" href="#">Парикмахерские инструменты и техника</a></li>
+									<li><a class="dropdown-item" href="#">Восковая депиляция и парафинотерапия</a></li>
+									<li><a class="dropdown-item" href="#">Наращивание ресниц, краска для бровей и ресниц</a></li>
+									<li><a class="dropdown-item" href="#">Спецодежда и одноразовые принадлежности</a></li>
+									<li><a class="dropdown-item" href="#">Оборудование для салонов</a></li>
+									<li><a class="dropdown-item" href="#">Стерилизация инструментов</a></li>
+								</ul>	
+							</div>
+						  </div>
+						</div>
+						<div class="accordion-item">
+						  <h4 class="accordion-header" id="panelsStayOpen-headingTwo">
+							 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+								Покупателям
+							 </button>
+						  </h4>
+						  <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+							<div class="accordion-body">
+								<ul >
+									<li><a class="dropdown-item" href="#">Маникюрные педикюрные принадлежности</a></li>
+									<li><a class="dropdown-item" href="#">Гель-лаки и наращивание ногтей</a></li>
+									<li><a class="dropdown-item" href="#">Парикмахерские инструменты и техника</a></li>
+									<li><a class="dropdown-item" href="#">Восковая депиляция и парафинотерапия</a></li>
+									<li><a class="dropdown-item" href="#">Наращивание ресниц, краска для бровей и ресниц</a></li>
+									<li><a class="dropdown-item" href="#">Спецодежда и одноразовые принадлежности</a></li>
+									<li><a class="dropdown-item" href="#">Оборудование для салонов</a></li>
+									<li><a class="dropdown-item" href="#">Стерилизация инструментов</a></li>
+								</ul>	
+							</div>
+						  </div>
+						</div>
+						<div class="accordion-item">
+						  <h5 class="accordion-header" id="panelsStayOpen-headingThree">
+							 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+								Контакты
+							 </button>
+						  </h5>
+						  <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+							<div class="accordion-body">
+								<ul >
+									<li><a class="dropdown-item" href="#">Маникюрные педикюрные принадлежности</a></li>
+									<li><a class="dropdown-item" href="#">Гель-лаки и наращивание ногтей</a></li>
+									<li><a class="dropdown-item" href="#">Парикмахерские инструменты и техника</a></li>
+									<li><a class="dropdown-item" href="#">Восковая депиляция и парафинотерапия</a></li>
+									<li><a class="dropdown-item" href="#">Наращивание ресниц, краска для бровей и ресниц</a></li>
+									<li><a class="dropdown-item" href="#">Спецодежда и одноразовые принадлежности</a></li>
+									<li><a class="dropdown-item" href="#">Оборудование для салонов</a></li>
+									<li><a class="dropdown-item" href="#">Стерилизация инструментов</a></li>
+								</ul>	
+							</div>
+						  </div>
+						</div>
+					 </div>
+				</div>
+			 </div>
+		</nav>
+	  
+		<nav class="py-2 d-none d-lg-block">
 			<div class="container d-flex flex-nowrap justify-content-between">
 				<ul class="nav d-none d-lg-flex">
 					<li class="nav-item"><a href="#" class="nav-link px-2" aria-current="page">Доставка и оплата</a></li>
@@ -28,7 +103,7 @@
 				</ul>
 			</div>
 		</nav>
-		<header class="mt-3  pb-3">
+		<header class="mt-3  pb-3 d-none d-lg-block">
 			<div class="container d-lg-flex flex-nowrap justify-content-between">
 				<div class="p-1 text-center text-lg-start mb-2 mb-lg-0">
 					<a href="#" class="text-decoration-none">
