--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="wrapper">
 		<nav class="navbar navbar-expand-lg navbar-light fixed-top d-lg-none" aria-label="Tenth navbar example">
-			<div class="container-fluid">
+			<div class="container-fluid d-flex">
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
 				  <span>
 					<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-menu-up" viewBox="0 0 16 16">
@@ -23,17 +23,35 @@
 					 </svg>
 				  </span>
 				</button>
+				<ul class="d-flex nav-icons">
+					<li class="ms-3 pt-1"><a href="#">
+						<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+							<path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+						 </svg>
+					</a></li>
+					<li class="ms-3 pt-1"><a href="#">
+						<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+							<path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"/>
+						 </svg>
+					</a></li>
+					<li class="ms-3 pt-1"><a href="#">
+						<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-door-closed" viewBox="0 0 16 16">
+							<path d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V2zm1 13h8V2H4v13z"/>
+							<path d="M9 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0z"/>
+						 </svg>
+					</a></li>
+				</ul>
 				<div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
 					<div class="accordion" id="accordionPanelsStayOpenExample">
 						<div class="accordion-item">
-						  <h4 class="accordion-header" id="panelsStayOpen-headingOne">
+						  <h2 class="accordion-header" id="panelsStayOpen-headingOne">
 							 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
 								Каталог Товаров
 							 </button>
-						  </h4>
+						  </h2>
 						  <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
 							 <div class="accordion-body">
-								<ul >
+								<ul>
 									<li><a class="dropdown-item" href="#">Маникюрные педикюрные принадлежности</a></li>
 									<li><a class="dropdown-item" href="#">Гель-лаки и наращивание ногтей</a></li>
 									<li><a class="dropdown-item" href="#">Парикмахерские инструменты и техника</a></li>
@@ -47,11 +65,11 @@
 						  </div>
 						</div>
 						<div class="accordion-item">
-						  <h4 class="accordion-header" id="panelsStayOpen-headingTwo">
+						  <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
 							 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
 								Покупателям
 							 </button>
-						  </h4>
+						  </h2>
 						  <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
 							<div class="accordion-body">
 								<ul >
@@ -68,11 +86,11 @@
 						  </div>
 						</div>
 						<div class="accordion-item">
-						  <h5 class="accordion-header" id="panelsStayOpen-headingThree">
+						  <h2 class="accordion-header" id="panelsStayOpen-headingThree">
 							 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
 								Контакты
 							 </button>
-						  </h5>
+						  </h2>
 						  <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
 							<div class="accordion-body">
 								<ul >
