--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Master</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -16,102 +16,121 @@
 	<div class="wrapper">
 		<nav class="navbar navbar-expand-lg navbar-light fixed-top d-lg-none" aria-label="Tenth navbar example">
 			<div class="container-fluid d-flex">
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08" aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
-				  <span>
-					<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-menu-up" viewBox="0 0 16 16">
-						<path d="M7.646 15.854a.5.5 0 0 0 .708 0L10.207 14H14a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h3.793l1.853 1.854zM1 9V6h14v3H1zm14 1v2a1 1 0 0 1-1 1h-3.793a1 1 0 0 0-.707.293l-1.5 1.5-1.5-1.5A1 1 0 0 0 5.793 13H2a1 1 0 0 1-1-1v-2h14zm0-5H1V3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v2zM2 11.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 0-1h-8a.5.5 0 0 0-.5.5zm0-4a.5.5 0 0 0 .5.5h11a.5.5 0 0 0 0-1h-11a.5.5 0 0 0-.5.5zm0-4a.5.5 0 0 0 .5.5h6a.5.5 0 0 0 0-1h-6a.5.5 0 0 0-.5.5z"/>
-					 </svg>
-				  </span>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample08"
+					aria-controls="navbarsExample08" aria-expanded="false" aria-label="Toggle navigation">
+					<span>
+						<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+							class="bi bi-menu-up" viewBox="0 0 16 16">
+							<path
+								d="M7.646 15.854a.5.5 0 0 0 .708 0L10.207 14H14a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2v9a2 2 0 0 0 2 2h3.793l1.853 1.854zM1 9V6h14v3H1zm14 1v2a1 1 0 0 1-1 1h-3.793a1 1 0 0 0-.707.293l-1.5 1.5-1.5-1.5A1 1 0 0 0 5.793 13H2a1 1 0 0 1-1-1v-2h14zm0-5H1V3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v2zM2 11.5a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 0-1h-8a.5.5 0 0 0-.5.5zm0-4a.5.5 0 0 0 .5.5h11a.5.5 0 0 0 0-1h-11a.5.5 0 0 0-.5.5zm0-4a.5.5 0 0 0 .5.5h6a.5.5 0 0 0 0-1h-6a.5.5 0 0 0-.5.5z" />
+						</svg>
+					</span>
 				</button>
 				<ul class="d-flex nav-icons">
 					<li class="ms-3 pt-1"><a href="#">
-						<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
-							<path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
-						 </svg>
-					</a></li>
+							<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+								class="bi bi-heart" viewBox="0 0 16 16">
+								<path
+									d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z" />
+							</svg>
+						</a></li>
 					<li class="ms-3 pt-1"><a href="#">
-						<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
-							<path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z"/>
-						 </svg>
-					</a></li>
+							<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+								class="bi bi-bag" viewBox="0 0 16 16">
+								<path
+									d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1zm3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4h-3.5zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5z" />
+							</svg>
+						</a></li>
 					<li class="ms-3 pt-1"><a href="#">
-						<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-door-closed" viewBox="0 0 16 16">
-							<path d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V2zm1 13h8V2H4v13z"/>
-							<path d="M9 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0z"/>
-						 </svg>
-					</a></li>
+							<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
+								class="bi bi-door-closed" viewBox="0 0 16 16">
+								<path
+									d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V2zm1 13h8V2H4v13z" />
+								<path d="M9 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0z" />
+							</svg>
+						</a></li>
 				</ul>
 				<div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample08">
 					<div class="accordion" id="accordionPanelsStayOpenExample">
 						<div class="accordion-item">
-						  <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-							 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-								Каталог Товаров
-							 </button>
-						  </h2>
-						  <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
-							 <div class="accordion-body">
-								<ul>
-									<li><a class="dropdown-item" href="#">Маникюрные педикюрные принадлежности</a></li>
-									<li><a class="dropdown-item" href="#">Гель-лаки и наращивание ногтей</a></li>
-									<li><a class="dropdown-item" href="#">Парикмахерские инструменты и техника</a></li>
-									<li><a class="dropdown-item" href="#">Восковая депиляция и парафинотерапия</a></li>
-									<li><a class="dropdown-item" href="#">Наращивание ресниц, краска для бровей и ресниц</a></li>
-									<li><a class="dropdown-item" href="#">Спецодежда и одноразовые принадлежности</a></li>
-									<li><a class="dropdown-item" href="#">Оборудование для салонов</a></li>
-									<li><a class="dropdown-item" href="#">Стерилизация инструментов</a></li>
-								</ul>	
+							<h2 class="accordion-header" id="panelsStayOpen-headingOne">
+								<button class="accordion-button" type="button" data-bs-toggle="collapse"
+									data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+									aria-controls="panelsStayOpen-collapseOne">
+									Каталог Товаров
+								</button>
+							</h2>
+							<div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse"
+								aria-labelledby="panelsStayOpen-headingOne">
+								<div class="accordion-body">
+									<ul>
+										<li><a class="dropdown-item" href="#">Маникюрные педикюрные принадлежности</a></li>
+										<li><a class="dropdown-item" href="#">Гель-лаки и наращивание ногтей</a></li>
+										<li><a class="dropdown-item" href="#">Парикмахерские инструменты и техника</a></li>
+										<li><a class="dropdown-item" href="#">Восковая депиляция и парафинотерапия</a></li>
+										<li><a class="dropdown-item" href="#">Наращивание ресниц, краска для бровей и ресниц</a>
+										</li>
+										<li><a class="dropdown-item" href="#">Спецодежда и одноразовые принадлежности</a></li>
+										<li><a class="dropdown-item" href="#">Оборудование для салонов</a></li>
+										<li><a class="dropdown-item" href="#">Стерилизация инструментов</a></li>
+									</ul>
+								</div>
 							</div>
-						  </div>
 						</div>
 						<div class="accordion-item">
-						  <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-							 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-								Покупателям
-							 </button>
-						  </h2>
-						  <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
-							<div class="accordion-body">
-								<ul >
-									<li><a class="dropdown-item" href="#">Маникюрные педикюрные принадлежности</a></li>
-									<li><a class="dropdown-item" href="#">Гель-лаки и наращивание ногтей</a></li>
-									<li><a class="dropdown-item" href="#">Парикмахерские инструменты и техника</a></li>
-									<li><a class="dropdown-item" href="#">Восковая депиляция и парафинотерапия</a></li>
-									<li><a class="dropdown-item" href="#">Наращивание ресниц, краска для бровей и ресниц</a></li>
-									<li><a class="dropdown-item" href="#">Спецодежда и одноразовые принадлежности</a></li>
-									<li><a class="dropdown-item" href="#">Оборудование для салонов</a></li>
-									<li><a class="dropdown-item" href="#">Стерилизация инструментов</a></li>
-								</ul>	
+							<h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+									data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+									aria-controls="panelsStayOpen-collapseTwo">
+									Покупателям
+								</button>
+							</h2>
+							<div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+								aria-labelledby="panelsStayOpen-headingTwo">
+								<div class="accordion-body">
+									<ul>
+										<li><a class="dropdown-item" href="#">Маникюрные педикюрные принадлежности</a></li>
+										<li><a class="dropdown-item" href="#">Гель-лаки и наращивание ногтей</a></li>
+										<li><a class="dropdown-item" href="#">Парикмахерские инструменты и техника</a></li>
+										<li><a class="dropdown-item" href="#">Восковая депиляция и парафинотерапия</a></li>
+										<li><a class="dropdown-item" href="#">Наращивание ресниц, краска для бровей и ресниц</a>
+										</li>
+										<li><a class="dropdown-item" href="#">Спецодежда и одноразовые принадлежности</a></li>
+										<li><a class="dropdown-item" href="#">Оборудование для салонов</a></li>
+										<li><a class="dropdown-item" href="#">Стерилизация инструментов</a></li>
+									</ul>
+								</div>
 							</div>
-						  </div>
 						</div>
 						<div class="accordion-item">
-						  <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-							 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-								Контакты
-							 </button>
-						  </h2>
-						  <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
-							<div class="accordion-body">
-								<ul >
-									<li><a class="dropdown-item" href="#">Маникюрные педикюрные принадлежности</a></li>
-									<li><a class="dropdown-item" href="#">Гель-лаки и наращивание ногтей</a></li>
-									<li><a class="dropdown-item" href="#">Парикмахерские инструменты и техника</a></li>
-									<li><a class="dropdown-item" href="#">Восковая депиляция и парафинотерапия</a></li>
-									<li><a class="dropdown-item" href="#">Наращивание ресниц, краска для бровей и ресниц</a></li>
-									<li><a class="dropdown-item" href="#">Спецодежда и одноразовые принадлежности</a></li>
-									<li><a class="dropdown-item" href="#">Оборудование для салонов</a></li>
-									<li><a class="dropdown-item" href="#">Стерилизация инструментов</a></li>
-								</ul>	
+							<h2 class="accordion-header" id="panelsStayOpen-headingThree">
+								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+									data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+									aria-controls="panelsStayOpen-collapseThree">
+									Контакты
+								</button>
+							</h2>
+							<div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+								aria-labelledby="panelsStayOpen-headingThree">
+								<div class="accordion-body">
+									<ul>
+										<li><a class="dropdown-item" href="#">Маникюрные педикюрные принадлежности</a></li>
+										<li><a class="dropdown-item" href="#">Гель-лаки и наращивание ногтей</a></li>
+										<li><a class="dropdown-item" href="#">Парикмахерские инструменты и техника</a></li>
+										<li><a class="dropdown-item" href="#">Восковая депиляция и парафинотерапия</a></li>
+										<li><a class="dropdown-item" href="#">Наращивание ресниц, краска для бровей и ресниц</a>
+										</li>
+										<li><a class="dropdown-item" href="#">Спецодежда и одноразовые принадлежности</a></li>
+										<li><a class="dropdown-item" href="#">Оборудование для салонов</a></li>
+										<li><a class="dropdown-item" href="#">Стерилизация инструментов</a></li>
+									</ul>
+								</div>
 							</div>
-						  </div>
 						</div>
-					 </div>
+					</div>
 				</div>
 			</div>
-			
 		</nav>
-	  
 		<nav class="py-2 d-none d-lg-block">
 			<div class="container d-flex flex-nowrap justify-content-between">
 				<ul class="nav d-none d-lg-flex">
@@ -169,6 +188,12 @@
 			</div>
 		</header>
 		<main class="main">
+			<div class="logo-mobile d-lg-none text-center">
+				<a href="#" class="text-decoration-none">
+					<span class="logo">мАСТЕР</span>
+					<span class="under-logo">Все для салонов красоты</span>
+				</a>
+			</div>
 			<div class="banner">
 				<div class="container">
 					<div class="text-end banner-content">
@@ -514,17 +539,20 @@
 				<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
 					<div class="carousel-inner container text-center feedback-slider py-5">
 						<div class="carousel-item active text-start">
-							<p class="text-white">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+							<p class="text-white">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit
+								auctor aliquet. Aenean
 								sollicitudin, lorem quis bibendum auctor.</p>
 							<p class="fw-bolder fst-normal text-white">Лилия Таран</p>
 						</div>
 						<div class="carousel-item text-start">
-							<p class="text-white">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+							<p class="text-white">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit
+								auctor aliquet. Aenean
 								sollicitudin, lorem quis bibendum auctor.</p>
 							<p class="fw-bolder fst-normal text-white">Лилия Таран</p>
 						</div>
 						<div class="carousel-item text-start">
-							<p class="text-white">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+							<p class="text-white">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit
+								auctor aliquet. Aenean
 								sollicitudin, lorem quis bibendum auctor.</p>
 							<p class="fw-bolder fst-normal text-white">Лилия Таран</p>
 						</div>
@@ -610,15 +638,15 @@
 							</p>
 						</div>
 					</div>
-					<button class="carousel-control-prev about-us-prev" type="button" data-bs-target="#carouselExampleControls-1"
-						data-bs-slide="prev">
+					<button class="carousel-control-prev about-us-prev" type="button"
+						data-bs-target="#carouselExampleControls-1" data-bs-slide="prev">
 						<span aria-hidden="true"></span>
 						<span class="d-none d-md-block">
 							<img src="image/feedback/left.png" alt="prev">
 						</span>
 					</button>
-					<button class="carousel-control-next about-us-next" type="button" data-bs-target="#carouselExampleControls-1"
-						data-bs-slide="next">
+					<button class="carousel-control-next about-us-next" type="button"
+						data-bs-target="#carouselExampleControls-1" data-bs-slide="next">
 						<span aria-hidden="true"></span>
 						<span class="d-none d-md-block">
 							<img src="image/feedback/right.png" alt="next">
