--- a/index.html
+++ b/index.html
@@ -102,32 +102,33 @@
 								</div>
 							</div>
 						</div>
-						<div class="accordion-item">
-							<h2 class="accordion-header" id="panelsStayOpen-headingThree">
-								<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-									data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
-									aria-controls="panelsStayOpen-collapseThree">
-									Контакты
-								</button>
-							</h2>
-							<div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
-								aria-labelledby="panelsStayOpen-headingThree">
-								<div class="accordion-body">
-									<ul>
-										<li><a class="dropdown-item" href="#">Маникюрные педикюрные принадлежности</a></li>
-										<li><a class="dropdown-item" href="#">Гель-лаки и наращивание ногтей</a></li>
-										<li><a class="dropdown-item" href="#">Парикмахерские инструменты и техника</a></li>
-										<li><a class="dropdown-item" href="#">Восковая депиляция и парафинотерапия</a></li>
-										<li><a class="dropdown-item" href="#">Наращивание ресниц, краска для бровей и ресниц</a>
-										</li>
-										<li><a class="dropdown-item" href="#">Спецодежда и одноразовые принадлежности</a></li>
-										<li><a class="dropdown-item" href="#">Оборудование для салонов</a></li>
-										<li><a class="dropdown-item" href="#">Стерилизация инструментов</a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
 					</div>
+					<ul class="contacts-phone mt-2">
+						<li><a href="#">пр-т Гагарина 41/2,
+								г.Харьков</a></li>
+						<li><a href="mailto:vfon@ukr.net">vfon@ukr.net</a></li>
+						<li>
+							<a href="tel:380965699322">+380 (96) 569-93-22</a>
+							<a href="tel:380630516376">+380 (63) 051-63-76</a>
+							<a href="tel:380958004995">+380 (95) 800-49-95</a>
+						</li>
+						<li>
+							<p>Пн-пт 9:00-18:00</p>
+							<p>Сб 10:00-16:00</p>
+							<p>Вс выходной</p>
+						</li>
+					</ul>
+					<ul class="social-icon-phone d-flex my-2 mx-0 p-0">
+						<li class="me-2"><a href="#">
+								<img src="image/social-icons/instagram.png" alt="inst">
+							</a></li>
+						<li class="me-2"><a href="#">
+								<img src="image/social-icons/facebook.png" alt="fb">
+							</a></li>
+						<li class="me-0"><a href="#">
+								<img src="image/social-icons/google.png" alt="gl">
+							</a></li>
+					</ul>
 				</div>
 			</div>
 		</nav>
@@ -203,7 +204,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="guarantees mt-5 mx-3 mx-lg-0">
+			<div class="guarantees mx-3 mx-lg-0">
 				<div class="container">
 					<div class="row guarantees-list flex-md-nowrap">
 						<div class="mt-3 col-md p-4 me-md-3 guarantees-quality">
@@ -230,7 +231,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="sale mt-5">
+			<div class="sale">
 				<div class="container">
 					<div class="d-md-flex justify-content-between">
 						<div class="col-md-7 py-5 px-0 me-md-4 mb-2 week-sale">
@@ -655,8 +656,63 @@
 				</div>
 			</div>
 		</main>
-	</div>
+		<footer class="footer ">
+			<div class="container d-none d-lg-flex justify-content-between py-5 footer-top">
+				<div>
+					<h5><span>Каталог Товаров</span></h5>
+					<ul class="p-0">
+						<li><a href="#">Маникюр и педикюр</a></li>
+						<li><a href="#">Парикмахеское искусство</a></li>
+						<li><a href="#">Все для депиляции</a></li>
+						<li><a href="#">Ресницы</a></li>
+						<li><a href="#">Хна для росписи тела</a>
+						</li>
+						<li><a href="#">Оборудование</a></li>
+					</ul>
+				</div>
+				<div>
+					<h5><span>Покупателям</span></h5>
+					<ul class="p-0">
+						<li><a href="#">Доставка и опалата</a></li>
+						<li><a href="#">Сервис и гарантия</a></li>
+						<li><a href="#">Программа лояльности</a></li>
+						<li><a href="#">О нас</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>
+				</div>
+				<div>
+					<h5><span>Контакты</span></h5>
+					<ul class="contacts">
+						<li class="address"><a href="#">пр-т Гагарина 41/2, <br>
+								г.Харьков</a></li>
+						<li class="imail"><a href="mailto:vfon@ukr.net">vfon@ukr.net</a></li>
+						<li class="phone-numbers">
+							<a href="tel:380965699322">+380 (96) 569-93-22</a>
+							<a href="tel:380630516376">+380 (63) 051-63-76</a>
+							<a href="tel:380958004995">+380 (95) 800-49-95</a>
+						</li>
+						<li class="clock">
 
+						</li>
+					</ul>
+				</div>
+				<div>
+					<h5><span>социальные сети</span></h5>
+					<ul class="social-icons d-flex p-0">
+						<li class="social me-3"><a href="#">
+								<img src="image/social-icons/instagram.png" alt="inst">
+							</a></li>
+						<li class="social me-3"><a href="#">
+								<img src="image/social-icons/facebook.png" alt="fb">
+							</a></li>
+						<li class="social me-0"><a href="#">
+								<img src="image/social-icons/google.png" alt="gl">
+							</a></li>
+					</ul>
+				</div>
+			</div>
+		</footer>
+	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 		crossorigin="anonymous"></script>
