--- a/index.html
+++ b/index.html
@@ -103,21 +103,23 @@
 							</div>
 						</div>
 					</div>
-					<ul class="contacts-phone mt-2">
-						<li><a href="#">пр-т Гагарина 41/2,
-								г.Харьков</a></li>
-						<li><a href="mailto:vfon@ukr.net">vfon@ukr.net</a></li>
-						<li>
-							<a href="tel:380965699322">+380 (96) 569-93-22</a>
-							<a href="tel:380630516376">+380 (63) 051-63-76</a>
-							<a href="tel:380958004995">+380 (95) 800-49-95</a>
-						</li>
-						<li>
-							<p>Пн-пт 9:00-18:00</p>
-							<p>Сб 10:00-16:00</p>
-							<p>Вс выходной</p>
-						</li>
-					</ul>
+					<div>
+						<ul class="contact-mobile m-2 fw-bolder">
+							<li class="mt-2"><a href="#">пр-т Гагарина 41/2, <br>
+									г.Харьков</a></li>
+							<li class="mt-2"><a href="mailto:vfon@ukr.net">vfon@ukr.net</a></li>
+							<li class="mt-2">
+								<a href="tel:380965699322">+380 (96) 569-93-22</a>
+								<a href="tel:380630516376">+380 (63) 051-63-76</a>
+								<a href="tel:380958004995">+380 (95) 800-49-95</a>
+							</li>
+							<li class="mt-2">
+								Пн-пт 9:00-18:00 <br>
+								Сб 10:00-16:00 <br>
+								Вс выходной
+							</li>
+						</ul>
+					</div>
 					<ul class="social-icon-phone d-flex my-2 mx-0 p-0">
 						<li class="me-2"><a href="#">
 								<img src="image/social-icons/instagram.png" alt="inst">
@@ -692,7 +694,9 @@
 							<a href="tel:380958004995">+380 (95) 800-49-95</a>
 						</li>
 						<li class="clock">
-
+							Пн-пт 9:00-18:00 
+							Сб 10:00-16:00
+							Вс выходной
 						</li>
 					</ul>
 				</div>
