--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -254,7 +255,7 @@
 			<div class="bestseller mt-5 pt-5">
 				<div class="container">
 					<h3 class="text-center mb-5"><span>Хиты продаж</span></h3>
-					<div class="d-lg-flex justify-content-between">
+					<div class="d-lg-flex justify-content-between slider-slick">
 						<div class="card px-3 py-2 mt-2 py-lg-4 me-lg-3">
 							<h4 class="card-title text-center px-1"><a href="#">Масло после депиляции с лавандой и витамином Е
 									"DELICA"</a>
@@ -694,7 +695,7 @@
 							<a href="tel:380958004995">+380 (95) 800-49-95</a>
 						</li>
 						<li class="clock">
-							Пн-пт 9:00-18:00 
+							Пн-пт 9:00-18:00
 							Сб 10:00-16:00
 							Вс выходной
 						</li>
@@ -720,6 +721,9 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 		crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.js"></script>
+	<script src="js/js.js"></script>
 
 </body>
 
