--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 			<div class="novelties mt-5 py-5">
 				<div class="container">
 					<h3 class="text-center mb-5 novelties-title"><span>Новинки</span></h3>
-					<div class="d-lg-flex justify-content-between">
+					<div class="d-lg-flex justify-content-between slider-slick">
 						<div class="card px-3 py-2 mt-2 py-lg-4 me-lg-3">
 							<h4 class="card-title text-center px-1"><a href="#">Масло после депиляции с лавандой и витамином Е
 									"DELICA"</a>
