--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
 					</div>
 					<ul class="social-icon-phone d-flex my-2 mx-0 p-0">
 						<li class="me-2"><a href="#">
-								<img src="image/social-icons/instagram.png" alt="inst">
+								<img src="image/social-icons/instagram-pink.png" alt="inst">
 							</a></li>
 						<li class="me-2"><a href="#">
-								<img src="image/social-icons/facebook.png" alt="fb">
+								<img src="image/social-icons/google-pink.png" alt="google">
 							</a></li>
 						<li class="me-0"><a href="#">
-								<img src="image/social-icons/google.png" alt="gl">
+								<img src="image/social-icons/facebook-pink.png" alt="fb">
 							</a></li>
 					</ul>
 				</div>
@@ -192,11 +192,18 @@
 			</div>
 		</header>
 		<main class="main">
-			<div class="logo-mobile d-lg-none text-center">
-				<a href="#" class="text-decoration-none">
-					<span class="logo">мАСТЕР</span>
-					<span class="under-logo">Все для салонов красоты</span>
-				</a>
+			<div class="mobile-header d-lg-none">
+				<div class="logo-mobile text-center">
+					<a href="#" class="text-decoration-none">
+						<span class="logo">мАСТЕР</span>
+						<span class="under-logo">Все для салонов красоты</span>
+					</a>
+				</div>
+				<form class="mobile-search input-group mb-3 ">
+					<input type="search" class="form-control" placeholder="Я ищу" aria-label="Recipient's username"
+						aria-describedby="button-addon2">
+					<button class="btn btn-outline-secondary search-btn" type="button" id="button-addon2"></button>
+				</form>
 			</div>
 			<div class="banner">
 				<div class="container">
@@ -704,13 +711,13 @@
 				<div>
 					<h5><span>социальные сети</span></h5>
 					<ul class="social-icons d-flex p-0">
-						<li class="social me-3"><a href="#">
+						<li class="social me-3 instagram"><a href="#">
 								<img src="image/social-icons/instagram.png" alt="inst">
 							</a></li>
-						<li class="social me-3"><a href="#">
+						<li class="social me-3 facebook"><a href="#">
 								<img src="image/social-icons/facebook.png" alt="fb">
 							</a></li>
-						<li class="social me-0"><a href="#">
+						<li class="social me-0 google"><a href="#">
 								<img src="image/social-icons/google.png" alt="gl">
 							</a></li>
 					</ul>
