fonts-footer-bottom

--- a/index.html
+++ b/index.html
@@ -723,6 +723,11 @@
 					</ul>
 				</div>
 			</div>
+			<div class="footer-bottom m-0 text-center">
+				<div class="footer-bottom-content py-2">
+					<p class="p-0 m-0">© 2016 All rights reserved.</p>
+				</div>
+			</div>
 		</footer>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
