footer-bottom-color

--- a/index.html
+++ b/index.html
@@ -90,15 +90,11 @@
 								aria-labelledby="panelsStayOpen-headingTwo">
 								<div class="accordion-body">
 									<ul>
-										<li><a class="dropdown-item" href="#">Маникюрные педикюрные принадлежности</a></li>
-										<li><a class="dropdown-item" href="#">Гель-лаки и наращивание ногтей</a></li>
-										<li><a class="dropdown-item" href="#">Парикмахерские инструменты и техника</a></li>
-										<li><a class="dropdown-item" href="#">Восковая депиляция и парафинотерапия</a></li>
-										<li><a class="dropdown-item" href="#">Наращивание ресниц, краска для бровей и ресниц</a>
-										</li>
-										<li><a class="dropdown-item" href="#">Спецодежда и одноразовые принадлежности</a></li>
-										<li><a class="dropdown-item" href="#">Оборудование для салонов</a></li>
-										<li><a class="dropdown-item" href="#">Стерилизация инструментов</a></li>
+										<li><a class="dropdown-item" href="#">Доставка и опалата</a></li>
+										<li><a class="dropdown-item" href="#">Сервис и гарантия</a></li>
+										<li><a class="dropdown-item" href="#">Программа лояльности</a></li>
+										<li><a class="dropdown-item" href="#">О нас</a></li>
+										<li><a class="dropdown-item" href="#">Контакты</a></li>
 									</ul>
 								</div>
 							</div>
