bunner-and-novelties

--- a/index.html
+++ b/index.html
@@ -410,27 +410,27 @@
 								<a href="#"><img src="image/bestsellers/scisors.png" alt="scisors"></a>
 							</div>
 							<div class="rating-area d-block m-auto">
-								<input type="radio" id="star-5" name="rating" value="5">
-								<label for="star-5" title="Оценка «5»"></label>
+								<input type="radio" id="novelties-5" name="rating" value="5">
+								<label for="novelties-5" title="Оценка «5»"></label>
 
-								<input type="radio" id="star-4" name="rating" value="4">
-								<label for="star-4" title="Оценка «4»"></label>
+								<input type="radio" id="novelties-4" name="rating" value="4">
+								<label for="novelties-4" title="Оценка «4»"></label>
 
-								<input type="radio" id="star-3" name="rating" value="3">
-								<label for="star-3" title="Оценка «3»"></label>
+								<input type="radio" id="novelties-3" name="rating" value="3">
+								<label for="novelties-3" title="Оценка «3»"></label>
 
-								<input type="radio" id="star-2" name="rating" value="2">
-								<label for="star-2" title="Оценка «2»"></label>
+								<input type="radio" id="novelties-2" name="rating" value="2">
+								<label for="novelties-2" title="Оценка «2»"></label>
 
-								<input type="radio" id="star-1" name="rating" value="1">
-								<label for="star-1" title="Оценка «1»"></label>
+								<input type="radio" id="novelties-1" name="rating" value="1">
+								<label for="novelties-1" title="Оценка «1»"></label>
 							</div>
 							<div class="card-body p-0">
 								<p class="card-text text-center">180грн <span>215грн</span></p>
 								<form class="text-center d-lg-flex justify-content-between">
-									<label for="secondProduct">Кол-во
+									<label for="secondProductNovelties">Кол-во
 										<input class="text-center" type="number" min="1" name="num" value="1" step="1"
-											id="secondProduct"></label>
+											id="secondProductNovelties"></label>
 									<button href="#" class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn"
 										type="submit">купить</button>
 								</form>
@@ -462,9 +462,9 @@
 							<div class="card-body p-0">
 								<p class="card-text text-center">180грн <span>215грн</span></p>
 								<form class="text-center d-lg-flex justify-content-between">
-									<label for="thirdProduct">Кол-во
+									<label for="thirdProductNovelties">Кол-во
 										<input class="text-center" type="number" min="1" name="num" value="1" step="1"
-											id="thirdProduct"></label>
+											id="thirdProductNovelties"></label>
 									<button href="#" class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn"
 										type="submit">купить</button>
 								</form>
@@ -496,9 +496,9 @@
 							<div class="card-body p-0">
 								<p class="card-text text-center">180грн <span>215грн</span></p>
 								<form class="text-center d-lg-flex justify-content-between">
-									<label for="fourthProduct">Кол-во
+									<label for="fourthProductNovelties">Кол-во
 										<input class="text-center" type="number" min="1" name="num" value="1" step="1"
-											id="fourthProduct"></label>
+											id="fourthProductNovelties"></label>
 									<button href="#" class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn"
 										type="submit">купить</button>
 								</form>
@@ -530,9 +530,9 @@
 							<div class="card-body p-0">
 								<p class="card-text text-center">180грн <span>215грн</span></p>
 								<form class="text-center d-lg-flex justify-content-between">
-									<label for="firstProduct">Кол-во
+									<label for="firstProductNovelties">Кол-во
 										<input class="text-center" type="number" min="1" name="num" value="1" step="1"
-											id="firstProduct"></label>
+											id="firstProductNovelties"></label>
 									<button href="#" class="btn btn-primary ms-5 ms-md-1 mt-md-1 card-btn"
 										type="submit">купить</button>
 								</form>
