--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 						<div class="col-md-7 py-5 px-0 me-md-4 mb-2 week-sale">
 							<div class="text-start sale-text">
 								акционное предложение
-								<p>Товары недели</p>
+								<span>Товары недели</span>
 							</div>
 						</div>
 						<div class="col-md mb-2 py-5 px-0 text-end biggest-sale">
