--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					</span>
 				</button>
 				<ul class="d-flex nav-icons">
-					<li class="ms-3 pt-1">
+					<li class="pt-1">
 						<button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
 							<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
 								class="bi bi-heart" viewBox="0 0 16 16">
@@ -55,7 +55,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="ms-3 pt-1">
+					<li class="pt-1">
 						<button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#myBasket">
 							<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
 								class="bi bi-bag" viewBox="0 0 16 16">
@@ -84,7 +84,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="ms-3 pt-1">
+					<li class="pt-1">
 						<button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#singIn">
 							<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
 								class="bi bi-door-closed" viewBox="0 0 16 16">
