--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				</button>
 				<ul class="d-flex nav-icons">
 					<li class="pt-1">
-						<button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+						<button type="button" class="btn px-0" data-bs-toggle="modal" data-bs-target="#exampleModal">
 							<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
 								class="bi bi-heart" viewBox="0 0 16 16">
 								<path
@@ -55,8 +55,8 @@
 							</div>
 						</div>
 					</li>
-					<li class="pt-1">
-						<button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#myBasket">
+					<li class="ms-3 pt-1">
+						<button type="button" class="btn px-0" data-bs-toggle="modal" data-bs-target="#myBasket">
 							<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
 								class="bi bi-bag" viewBox="0 0 16 16">
 								<path
@@ -84,8 +84,8 @@
 							</div>
 						</div>
 					</li>
-					<li class="pt-1">
-						<button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#singIn">
+					<li class="ms-3 pt-1">
+						<button type="button" class="btn px-0" data-bs-toggle="modal" data-bs-target="#singIn">
 							<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
 								class="bi bi-door-closed" viewBox="0 0 16 16">
 								<path
