--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 					<button class="btn btn-outline-secondary search-btn" type="button" id="button-addon2"></button>
 				</form>
 			</div>
-			<div class="banner">
+			<div class="banner" style="background-image: url('image/banner/banner_main.jpg');">
 				<div class="container">
 					<div class="text-end banner-content">
 						<h1 class="text-end">
@@ -306,8 +306,10 @@
 					<div class="d-md-flex justify-content-between">
 						<div class="col-md-7 py-5 px-0 me-md-4 mb-2 week-sale">
 							<div class="text-start sale-text">
-								акционное предложение
+								<a href="#">
+									акционное предложение
 								<span>Товары недели</span>
+								</a>
 							</div>
 						</div>
 						<div class="col-md mb-2 py-5 px-0 text-end biggest-sale">
