--- a/index.html
+++ b/index.html
@@ -762,13 +762,13 @@
 				<div>
 					<h5><span>социальные сети</span></h5>
 					<ul class="social-icons d-flex p-0">
-						<li class="social me-3 instagram"><a href="#">
+						<li class="social me-3 instagram"><a href="https://www.instagram.com/" target="_blank">
 								<img src="image/social-icons/instagram.png" alt="inst">
 							</a></li>
-						<li class="social me-3 facebook"><a href="#">
+						<li class="social me-3 facebook"><a href="#" target="_blank">
 								<img src="image/social-icons/facebook.png" alt="fb">
 							</a></li>
-						<li class="social me-0 google"><a href="#">
+						<li class="social me-0 google"><a href="#" target="_blank">
 								<img src="image/social-icons/google.png" alt="gl">
 							</a></li>
 					</ul>
