--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 									</button>
 								</h2>
 								<div id="flush-collapseOne" class="accordion-collapse collapse"
-									aria-labelledby="flush-headingOne" data-bs-parent="#flush-headingOne">
+									aria-labelledby="flush-collapseOne" data-bs-parent="#accordionFlushExample">
 									<div class="accordion-body">
 										<ul>
 											<li><a class="dropdown-item" href="#">Маникюрные педикюрные принадлежности</a></li>
